Corrected z-index values

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-/* TODO Remove all borders */
+/* TODO Remove all temporary borders */
 
 /* CSS is written for mobile first design */
 
@@ -68,7 +68,7 @@ a {
     height: auto;
     color: #000;
     background: #fff;
-    z-index: 999;
+    z-index: 100;
 }
 
 section {
@@ -184,7 +184,7 @@ nav div {
     width: 100%;
     height: calc(7vw + 2rem);
     background: #fff;
-    z-index: 100;
+    z-index: 50;
     padding: 0.1rem 1.3rem;
 }
 
@@ -229,7 +229,7 @@ nav div a p {
     background-size: cover;
     border: none;
     font-size: 0;
-    z-index: 999;
+    z-index: 70;
 }
 
 nav ul {
@@ -276,7 +276,7 @@ nav ul.menu-open {
     right: 0;
     top: 0;
     width: 12rem;
-    z-index: 10;
+    z-index: 20;
 }
 
 /* #endregion Nav */
@@ -290,7 +290,7 @@ header {
     background-position: center;
     background-size: cover;
     border-bottom: 7rem solid #fff;
-    z-index: 5;
+    z-index: 10;
 }
 
 .js header {
@@ -505,7 +505,7 @@ footer p {
         width: 100%;
         height: 5rem;
         background: #fff;
-        z-index: 100;
+        z-index: 40;
         padding: 0.1rem 0.2rem 0.1rem 1rem
     }
 
@@ -524,7 +524,7 @@ footer p {
         width: 100%;
         height: 100%;
         align-self: center;
-        z-index: 999;
+        z-index: 60;
     }
 
     nav ul {
@@ -567,7 +567,7 @@ footer p {
         left: calc(30% - 8.5em);
         top: 3rem;
         font-size: var(--font-size-very-large);
-        z-index: 25;
+        z-index: 30;
     }
 
     section {
